crates/alder-parse/src/snapshots/alder_parse__template__tests__multiline_text.snap
---
source: crates/alder-parse/src/template.rs
description: "`line one\nline two`\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 10,
        },
    },
    value: Template(
        [
            Text(
                "line one\nline two",
            ),
        ],
    ),
}
