crates/alder-parse/src/snapshots/alder_parse__template__tests__record_in_hole.snap
---
source: crates/alder-parse/src/template.rs
description: "`${ { x: 1 } }`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Template(
        [
            Expr(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: Record(
                        [
                            Field {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 8,
                                        },
                                    },
                                    value: "x",
                                },
                                value: Some(
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 1.0,
                                                text: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
        ],
    ),
}
