crates/alder-parse/src/snapshots/alder_parse__template__tests__text_only.snap
---
source: crates/alder-parse/src/template.rs
description: "`hello world`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Template(
        [
            Text(
                "hello world",
            ),
        ],
    ),
}
